# semanticastindexer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION_PLAN.md  Dockerfile  LICENSE  Makefile  README.md  claude-desktop-config.example.json  dist-workspace.toml  indexer.yaml  rust-toolchain.toml  sai-cfg.yaml  sai-cfg.yml
.agents/skills/sai/: SKILL.md
.agents/skills/sai-deslop/: SKILL.md
.claude/agents/: dedup-auditor.md
.github/: dedup-gate.sai-cfg.yml
.github/workflows/: ci.yml  dedup-gate-cleanup.yml  dedup-gate.yml  docker.yml  pages.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  installation.md  introduction.md
book/src/concepts/: glossary.md  how-it-works.md
book/src/guides/: choosing-a-model.md  ci-cd.md  indexing.md  keeping-in-sync.md  opt-out-markers.md  search-and-duplicates.md  tuning-similarity.md
book/src/integrations/: mcp-clients.md  ollama.md  qdrant-cloud.md
book/src/operations/: performance.md  security.md  troubleshooting.md
book/src/project/: changelog.md  contributing.md  logical-audit.md
book/src/reference/: backends-and-embedders.md  chunking.md  cli.md  configuration.md  environment.md  mcp-server.md  output-schemas.md
docs/: architecture.md  backends-and-embedders.md  chunking.md  cli.md  configuration.md  index.html  install.md  install.ps1  install.sh  mcp-server.md  uninstall.sh
mcp-setup/: README.md  SKILL.md  setup.sh
mcp-setup/lib/: mcp-config.sh
mcp-setup/templates/: .mcp.json  claude-desktop-config.json  indexer.yaml  sai-cfg.yml
mcp-setup/tests/: test_setup.sh
src/: app.rs  cli.rs  config.rs  factory.rs  git.rs  indexer.rs  lib.rs  logging.rs  main.rs  mcp.rs  search.rs  tls.rs  worker.rs
src/domain/: chunk.rs  duplicate.rs  embedding.rs  hit.rs  mod.rs  plan.rs  report.rs  similar.rs
src/init/: interview.rs  mod.rs  template.rs
src/repos/: delegate.rs  mock.rs  mod.rs  qdrant.rs  vectorstore.rs
src/repos/duckdb/: mod.rs  worker.rs
src/service/: indexing.rs  mod.rs  query.rs
src/vectordbs/: duckdb.rs  embedder.rs  mock.rs  mod.rs  qdrant.rs
tests/: cli_and_chunking.rs  config_init.rs  mcp_stdio_clean.rs
tests/hurl/: protocol.hurl  readonly.hurl  run.sh  search_similar.hurl  setup_security.hurl  status_duplicates.hurl  write.hurl
