[package]
name = "semanticastindexer"
version = "0.1.5"
edition = "2024"
# 1.88 is the floor imposed by ort 2.0.0-rc.12; also unlocks duckdb >= 1.5 (1.10503).
rust-version = "1.88"
description = "Near-duplicate detection and semantic code search for AI coding agents. MCP server + CLI. Local-first with embeddings (DuckDB + ONNX/Ollama) or Qdrant."
license = "MIT"
repository = "https://github.com/maadgrom/semanticastindexer"
readme = "README.md"
keywords = ["near-duplicate", "deslop", "sai", "mcp", "embeddings"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "semanticastindexer"
path = "src/main.rs"

[features]
# We recommend always building with --features all (see Makefile and README).
# This gives users a single binary with every backend, embedder, MCP server, and AST chunker.
default = ["qdrant"]
qdrant = ["dep:qdrant-client"]
# DuckDB storage backend (VSS/HNSW). Needs an embedder feature (ort or ollama) to
# actually produce vectors.
duckdb = ["dep:duckdb"]
# Local ONNX embedder via raw ort (ONNX Runtime) — implies the duckdb storage backend.
ort = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:hf-hub", "duckdb"]
# Remote Ollama HTTP embedder — implies the duckdb storage backend.
ollama = ["dep:reqwest", "duckdb"]
# AST chunker (tree-sitter). Supports TypeScript/TSX, Rust, Go, and Python.
# Backend-free — gated only so the heavy tree-sitter grammars stay out of the default build.
ast = ["dep:tree-sitter", "dep:tree-sitter-typescript", "dep:tree-sitter-rust", "dep:tree-sitter-go", "dep:tree-sitter-python"]
# MCP server (`semanticastindexer mcp`): exposes semantic code search to Claude over stdio
# via the official Rust MCP SDK (rmcp). READ-ONLY. Defaults to backend=duckdb +
# embedder=ollama, so it pulls in those features to be usable out of the box. schemars
# generates the JSON tool-input schemas the protocol requires.
mcp = ["dep:rmcp", "dep:schemars", "duckdb", "ollama"]

# The canonical build: `cargo build --release --features all`
# Contains qdrant + duckdb + ort + ollama + ast + mcp.
all = ["qdrant", "ort", "ollama", "ast", "mcp"]

[dependencies]
qdrant-client = { version = "1.18", optional = true }
# DuckDB backend (feature = "duckdb"): VSS/HNSW vector persistence.
duckdb = { version = "1", features = ["bundled"], optional = true }
# Local ONNX embedder (feature = "ort"): raw ONNX Runtime + tokenizer + HF model download.
# ort is a 2.x prerelease; pin to the rc proven in this tree (download-binaries default).
ort = { version = "=2.0.0-rc.12", optional = true }
# default-features off to drop `esaxx_fast`: it pulls esaxx-rs's C++ build, whose
# hardcoded static CRT (/MT) cannot link against the /MD CRT of bundled DuckDB on
# Windows (LNK2038). esaxx only accelerates unigram TRAINING — we only load and run
# tokenizers — and without `esaxx-rs/cpp` the crate is pure Rust. `onig` keeps the
# standard regex backend; `progressbar` matches the previous default behavior.
tokenizers = { version = "0.23", default-features = false, features = [
    "onig",
    "progressbar",
], optional = true }
ndarray = { version = "0.17", optional = true }
# hf-hub >= 0.4 is required for HF's Xet-backed storage (0.3 cannot fetch tokenizer.json
# for the default model repo).
hf-hub = { version = "0.5", optional = true }
# Remote Ollama HTTP embedder (feature = "ollama").
reqwest = { version = "0.13", features = ["json"], optional = true }
# AST chunker (feature = "ast"): tree-sitter + grammars for TS/TSX, Rust, Go, and Python.
# Grammar crates bind through the tree-sitter-language ABI shim, so these build together.
tree-sitter = { version = "0.26", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
# MCP server (feature = "mcp"): official Rust MCP SDK + JSON-schema generation for tools.
# Pinned to 1.7 (verified to build with cargo 1.96 / rustc 1.96 in this tree). Features:
# server (handler), macros (#[tool]/#[tool_router]/#[tool_handler]), transport-io (stdio),
# schemars (tool input schemas).
rmcp = { version = "1.7", optional = true, default-features = false, features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
schemars = { version = "1", optional = true }
# twox-hash is NON-optional: point_id uses XxHash64 (seed 0) unconditionally so
# Qdrant and DuckDB produce identical stable point IDs. (2.x changed the API, not
# the algorithm — the pinned-value test in indexer.rs guards ID stability.)
twox-hash = "2"
# sync: the backend worker channel (worker.rs) uses tokio::sync::{mpsc, oneshot} in
# every build — declare it explicitly instead of relying on other deps' feature
# unification to turn it on.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
# Logging facade (non-optional, core): all diagnostics flow through `tracing` to a
# stderr subscriber so stdout stays a clean data/JSON-RPC channel. `tracing` is
# already transitively in-tree (via h2/rmcp); `tracing-subscriber` is the one new dep.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml is archived/unmaintained; serde_yaml_ng is the API-compatible fork.
serde_yaml_ng = "0.10"
globset = "0.4"

[dev-dependencies]
# Temp source trees for the mocked happy-path flow tests (no network, no real backend).
tempfile = "3"

# Bundled DuckDB is a single giant C++ amalgamation; compiling it WITH debug info
# breaks MSVC on the GitHub windows runners ("failed to run custom build command for
# libduckdb-sys"), while release builds (no debug info) are proven to work there
# (cargo-dist ships Windows binaries). Nobody debugs DuckDB internals from this repo,
# so drop debug info for just this crate in dev/test builds — fixes Windows CI and
# shrinks every local debug build.
[profile.dev.package.libduckdb-sys]
debug = false

[profile.release]
# opt-level 3 + thin LTO: the embedder's hand-written mean-pool / L2-normalize loops
# and the tokenizer are hot, CPU-bound numeric code during indexing. The extra
# inlining/vectorization is worth the modest compile-time cost.
opt-level = 3
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
